Add version requirement note to AI and unstructured data validation docs

--- a/docs/data-tests/ai-data-tests/ai_data_validations.mdx
+++ b/docs/data-tests/ai-data-tests/ai_data_validations.mdx
@@ -4,6 +4,8 @@ title: "AI Data Validations"
 
 <Note type="warning">
   **Beta Feature**: AI data validation tests is currently in beta. The functionality and interface may change in future releases.
+  
+  **Version Requirement**: This feature requires Elementary dbt package version 0.18.0 or above.
 </Note>
 
 # AI Data Validation with Elementary
