--- a/docs/data-tests/ai-data-tests/unstructured_data_validations.mdx
+++ b/docs/data-tests/ai-data-tests/unstructured_data_validations.mdx
@@ -4,6 +4,8 @@ title: "Unstructured Data Validations"
 
 <Note type="warning">
   **Beta Feature**: Unstructured data validation tests is currently in beta. The functionality and interface may change in future releases.
+  
+  **Version Requirement**: This feature requires Elementary dbt package version 0.18.0 or above.
 </Note>
 
 # Validating Unstructured Data with Elementary
