Update quickstart-cli - python version

--- a/docs/oss/quickstart/quickstart-cli.mdx
+++ b/docs/oss/quickstart/quickstart-cli.mdx
@@ -3,6 +3,7 @@ title: "Quickstart: Elementary CLI"
 sidebarTitle: "Install Elementary CLI"
 icon: "square-2"
 ---
+<Info> Elementary supports Python versions 3.9 - 3.12, aligning with the [versions supported by dbt](https://docs.getdbt.com/faqs/Core/install-python-compatibility#python-compatibility-matrix).</Info>
 
 Before installing the CLI, make sure to complete the steps dbt package installation, including executing `dbt run` with the Elementary package models.
 
