change security titles

--- a/docs/cloud/integrations/security-and-connectivity/aws-privatelink-integration.mdx
+++ b/docs/cloud/integrations/security-and-connectivity/aws-privatelink-integration.mdx
@@ -1,6 +1,6 @@
 ---
-title: "AWS PrivateLink Integration"
-sidebarTitle: "AWS PrivateLink integration"
+title: "AWS PrivateLink"
+sidebarTitle: "AWS PrivateLink"
 ---
 
 ## What is AWS PrivateLink?
