add github regenearating token

--- a/docs/_snippets/cloud/integrations/repo-connection-settings.mdx
+++ b/docs/_snippets/cloud/integrations/repo-connection-settings.mdx
@@ -2,10 +2,11 @@ After the authentication, you need to fill in the following details:
 - **Repository** - The full name of the code repo.
 - _Optional_ **Environment base branch** - If you want Elementary to open PRs in a target branch different than default, detail the branch name here.
 - _Optional_ **Project path** - If your dbt project isn't on the root directory of the repo, detail it's path here.
+- _Optional_ **Update token** - When the github token expires, regenerate a fine-grained token and paste it here. 
 
 <Frame caption="Github connection to Elementary">
   <img
-    src="https://res.cloudinary.com/diuctyblm/image/upload/v1725360266/code-repo-details_um4cec.png"
+    src="https://res.cloudinary.com/do5hrgokq/image/upload/v1742806704/github_connection.png"
     alt="Repository connection settings"
   />
 </Frame>
