--- a/docs/oss/quickstart/quickstart-alerts.mdx
+++ b/docs/oss/quickstart/quickstart-alerts.mdx
@@ -4,10 +4,6 @@ sidebarTitle: "Setup alerts"
 icon: "square-5"
 ---
 
-<Tip>
-  More alerts integrations are coming soon, reach out to us for details!
-</Tip>
-
 <Snippet file="alerts/alerts-introduction.mdx" />
 
 <CardGroup cols={2}>
@@ -36,3 +32,9 @@ icon: "square-5"
     />
   </Card>
 </CardGroup>
+
+
+Elementary alerts can be enriched with metadata such as owners, tags, and descriptions, and offer flexible configuration options to fit your team's needs. Learn more about alert configuration [here](/oss/guides/alerts/alerts-configuration).
+
+To alert on source freshness, see [this guide](/oss/guides/collect-dbt-source-freshness).
+
