--- a/docs/oss/quickstart/quickstart-cli-package.mdx
+++ b/docs/oss/quickstart/quickstart-cli-package.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Install Elementary dbt package"
+title: "Quickstart: Install Elementary dbt package"
 sidebarTitle: "Install dbt package"
 icon: "square-1"
 ---
@@ -9,9 +9,3 @@ icon: "square-1"
 ## What's next?
 
 Take a moment to ⭐️ [star our Github repo!](https://github.com/elementary-data/elementary) ⭐️ (It helps us a lot)
-
-Then -
-
-1. [Install the Elementary CLI](/oss/quickstart/quickstart-cli) 🤩
-2. [Add data anomaly detection dbt tests](/data-tests/add-elementary-tests) 📈
-3. [Deploy Elementary in production](/oss/deployment-and-configuration/elementary-in-production) 🚀
