--- a/docs/_snippets/quickstart/quickstart-elementary-prod.mdx
+++ b/docs/_snippets/quickstart/quickstart-elementary-prod.mdx
@@ -1,5 +1,5 @@
 <Card
-  title="Try Elementary cloud with a free 30 day trial!"> href="https://app.elementary-data.com/"</Card>
+  title="Try Elementary cloud with a free 30 day trial!" icon="cloud" href="https://app.elementary-data.com/" />
 
 Running Elementary OSS in production means to include the dbt package in your production dbt project,
 and setting up an automated manner to run the Elementary CLI.
