add quickstart full guide

--- a/docs/_snippets/quickstart/quickstart-elementary-prod.mdx
+++ b/docs/_snippets/quickstart/quickstart-elementary-prod.mdx
@@ -1,8 +1,6 @@
 <Card
-  title="Try Elementary cloud with a free 30 day trial!" icon="cloud" href="https://app.elementary-data.com/" />
+  title="Try Elementary cloud with a free 30 day trial" icon="cloud" href="https://app.elementary-data.com/" />
 
-Running Elementary OSS in production means to include the dbt package in your production dbt project,
-and setting up an automated manner to run the Elementary CLI.
 
 You can choose any system that allows you to orchestrate a CLI execution, as long as it can meet the following requirements:
 
