--- a/docs/oss/quickstart/quickstart-prod.mdx
+++ b/docs/oss/quickstart/quickstart-prod.mdx
@@ -3,5 +3,7 @@ title: "Quickstart: Elementary in Production"
 sidebarTitle: "Elementary in production"
 icon: "square-6"
 ---
+**Running Elementary OSS in production means to include the dbt package in your production dbt project,
+and setting up an automated manner to run the Elementary CLI.** This step is optional, but it will help you automate, control and scale Elementary OSS.
 
 <Snippet file="quickstart/quickstart-elementary-prod.mdx" />
