--- a/docs/_snippets/quickstart/quickstart-elementary-prod.mdx
+++ b/docs/_snippets/quickstart/quickstart-elementary-prod.mdx
@@ -1,5 +1,4 @@
-<Card
-  title="Try Elementary cloud with a free 30 day trial" icon="cloud" href="https://app.elementary-data.com/" />
+<Card horizontal="true" title="Try Elementary cloud with a free 30 day trial" icon="cloud" href="https://app.elementary-data.com/"/>
 
 
 You can choose any system that allows you to orchestrate a CLI execution, as long as it can meet the following requirements:
