--- a/docs/oss/quickstart/quickstart-alerts.mdx
+++ b/docs/oss/quickstart/quickstart-alerts.mdx
@@ -4,6 +4,10 @@ sidebarTitle: "Setup alerts"
 icon: "square-5"
 ---
 
+**Elementary helps you stay on top of data issues by generating alerts for test failures, anomalies, and other data reliability signals.**
+
+**Set up alerts to notify the right people in real time via Slack or Microsoft Teams, and configure them with metadata like owners and tags to make triaging easier. You can tailor alert rules to your workflows to reduce noise and focus on the most important issues.**
+
 <Snippet file="alerts/alerts-introduction.mdx" />
 
 <CardGroup cols={2}>
@@ -15,7 +19,7 @@ icon: "square-5"
   <br />
   <img
     noZoom
-    width="50"
+    width="20"
     src="https://res.cloudinary.com/dvmtceykh/image/upload/v1707817559/zdlkzpd7wfot3je5zcbt.png"
   />
   </Card>
@@ -33,6 +37,7 @@ icon: "square-5"
   </Card>
 </CardGroup>
 
+## Alert configuration
 
 Elementary alerts can be enriched with metadata such as owners, tags, and descriptions, and offer flexible configuration options to fit your team's needs. Learn more about alert configuration [here](/oss/guides/alerts/alerts-configuration).
 
