--- a/docs/oss/quickstart/quickstart-report.mdx
+++ b/docs/oss/quickstart/quickstart-report.mdx
@@ -1,14 +1,11 @@
 ---
 title: "Quickstart: Elementary Observability Report"
-sidebarTitle: "Generate an observability report"
+sidebarTitle: "Generate observability report"
 icon: "square-4"
 ---
 
----
-title: "Generate observability report"
----
 
-Elementary [data observability report](/features/collaboration-and-communication/data-observability-dashboard) can be used for visualization and exploration of data from the dbt-package tables. That includes dbt test results, Elementary anomaly detection results, dbt artifacts, tests runs, etc.
+**Elementary [data observability report](/features/collaboration-and-communication/data-observability-dashboard) can be used for visualization and exploration of data from the dbt-package tables. That includes dbt test results, Elementary anomaly detection results, dbt artifacts, tests runs, etc.**
 
 <Frame>
   <img
