--- a/docs/oss/quickstart/quickstart-tests.mdx
+++ b/docs/oss/quickstart/quickstart-tests.mdx
@@ -4,7 +4,7 @@ sidebarTitle: "Add Elementary tests"
 icon: "square-3"
 ---
 
-**Once you've set up the basic Elementary components — the dbt package and CLI — you can start adding Elementary tests to your data. You can add Elementary tests after completing the initial setup or later as you identify critical tables and metrics. Many teams start with a few volume or freshness tests, then expand coverage as needed.**
+**Once you've set up the basic Elementary components — the dbt package and CLI — you can start adding Elementary tests to your data. You can add Elementary tests after completing the initial setup or later as you identify critical tables and metrics.** Many teams start with a few volume or freshness tests, then expand coverage as needed.
 
 The Elementary dbt package provides anomaly tests for detection of data quality issues.Elementary data tests are configured and executed like native tests in your dbt project. 
 Elementary tests can be used in addition to dbt tests, packages tests (such as dbt-expectations), and custom tests.
