--- a/docs/oss/quickstart/quickstart-alerts.mdx
+++ b/docs/oss/quickstart/quickstart-alerts.mdx
@@ -4,9 +4,7 @@ sidebarTitle: "Setup alerts"
 icon: "square-5"
 ---
 
-**Elementary helps you stay on top of data issues by generating alerts for test failures, anomalies, and other data reliability signals.**
-
-Set up alerts to notify the right people in real time via Slack or Microsoft Teams, and configure them with metadata like owners and tags to make triaging easier. You can tailor alert rules to your workflows to reduce noise and focus on the most important issues.
+**Elementary helps you stay on top of data issues by generating Slack and Microsoft Teams alerts for test failures, anomalies, and other data reliability signals.**
 
 <Snippet file="alerts/alerts-introduction.mdx" />
 
