--- a/docs/oss/quickstart/quickstart-tests.mdx
+++ b/docs/oss/quickstart/quickstart-tests.mdx
@@ -6,7 +6,7 @@ icon: "square-3"
 
 **Once you've set up the basic Elementary components — the dbt package and CLI — you can start adding Elementary tests to your data. You can add Elementary tests once completing the initial setup or later as you identify critical tables and metrics.** Many teams start with a few volume or freshness tests, then expand coverage as needed.
 
-Elementary data tests include flexible anomaly detection tests, schema changes and Python tests, configured and executed like native tests in your dbt project. Elementary tests can be used in addition to dbt tests, packages tests (such as dbt-expectations), and custom tests. All of these test results will be presented in the Elementary UI and alerts.
+Elementary data tests include flexible anomaly detection tests, schema changes and Python tests, configured and executed like native tests in your dbt project. Elementary tests can be used in addition to dbt tests, packages tests (such as dbt-expectations), and custom tests. All test results will be presented in the Elementary UI and alerts.
 
 
 <CardGroup cols={3}>
