--- a/docs/oss/quickstart/quickstart-prod.mdx
+++ b/docs/oss/quickstart/quickstart-prod.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Quickstart: Elementary in Production"
-sidebarTitle: "Elementary in production"
+title: "Quickstart: Deploy in Production"
+sidebarTitle: "Deploy in production"
 icon: "square-6"
 ---
 **Running Elementary OSS in production means to include the dbt package in your production dbt project,
