--- a/docs/oss/general/troubleshooting.mdx
+++ b/docs/oss/general/troubleshooting.mdx
@@ -209,7 +209,7 @@ dbt run --select elementary --vars '{"enable_elementary_models": true}'
 
 <Accordion title="My problem is not listed here">
 
-If you're experiencing issues of any kind, please contact us on the [#support](https://elementary-community.slack.com/archives/C02CTC89LAX) channel.
+If you're experiencing issues of any kind, reach out on the [#community-support](https://elementary-community.slack.com/archives/C02CTC89LAX) channel. Elementary AI and the team will be happy to help.
 
 </Accordion>
 
