--- a/docs/overview/cloud-vs-oss.mdx
+++ b/docs/overview/cloud-vs-oss.mdx
@@ -9,11 +9,13 @@ icon: "list-check"
 
 If you’re just beginning your data quality journey, the decision between OSS and Cloud depends on your goals and team setup:
 
-- **Start with OSS**  if you have a small data team focused primarily on detection. The OSS package integrates seamlessly into dbt workflows but operates as a local solution, requiring dedicated resources for setup and ongoing maintenance. It’s ideal for small teams of data and/or analytics engineers seeking a straightforward, non-collaborative setup.
+<Icon icon="github" iconType="solid" /> **Elementary OSS**
 
+A self-maintained, open-source CLI that integrates seamlessly with your dbt project and the Elementary dbt package. It enables alerting and provides the self-hosted Elementary data observability report, offering a comprehensive view of your dbt runs, all dbt test results, data lineage, and test coverage.
 
+<Icon icon="cloud" iconType="solid" /> **Elementary Cloud**
   
-- **Choose Cloud** if you’re looking to set up a scalable, collaborative data quality program. The Elementary Cloud Platform integrates into dbt workflows, providing a developer-centric tool for engineers to maintain and govern data quality rules while also offering a cloud-based interface for business users and data stewards. This enables engineers to proactively identify and resolve data issues while consumers can monitor data health, receive notifications, view health scores, and add their own validations in a user-friendly environment. It offers advanced features like automated freshness and volume monitoring, ML-powered anomaly detection, a simple data catalog,  and rich integrations.
+A fully managed, enterprise-ready solution designed for scalability and automation. It offers automated ML-powered anomaly detection, flexible data discovery, an integrated incident management system, and collaboration features. Delivering high value with minimal setup and infrastructure maintenance, it's ideal for teams looking to enhance data reliability without operational overhead.
 
 This short video covers the difference between OSS and Cloud:
 
