--- a/docs/cloud/integrations/alerts/jira.mdx
+++ b/docs/cloud/integrations/alerts/jira.mdx
@@ -25,7 +25,8 @@ The ticket will automatically be created in Jira, in the team you chose upon con
 After the ticket is created you can see the Jira issue link in the incident page.
 The ticket will also contain a link to the incident in Elementary.
 
-
 <Note>Note: Elementary will not update the ticket in Jira when the incident is resolved or changed in any way</Note>
 
 <img src="https://res.cloudinary.com/dvmtceykh/image/upload/v1739794590/jira_ticket_l6wknb.png" />
+
+<Warning>ELementary Jira tickets include the basic ticket fields, test information, asset information and metadata. When connecting Jira, please make sure there's no required field that Elementary doesn't provide.</Warning>
