--- a/docs/cloud/integrations/alerts/jira.mdx
+++ b/docs/cloud/integrations/alerts/jira.mdx
@@ -29,4 +29,4 @@ The ticket will also contain a link to the incident in Elementary.
 
 <img src="https://res.cloudinary.com/dvmtceykh/image/upload/v1739794590/jira_ticket_l6wknb.png" />
 
-<Warning>ELementary Jira tickets include the basic ticket fields, test information, asset information and metadata. When connecting Jira, please make sure there's no required field that Elementary doesn't provide.</Warning>
+<Warning>Elementary Jira tickets include the basic ticket fields, test information, asset information and metadata. When connecting Jira, please make sure there's no required field that Elementary doesn't provide.</Warning>
